--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -2,16 +2,36 @@ $vert-degeu:#33ffbb
 
 $bisque: bisque
 
+$bleu-clair: #4095BF
+$orange-jaune: #BFAA40
+$vert-clair: #40BF80
+$rouge-foncer: #BF5540
+$violet-clair: #BF40BF
+$orange-foncer: #BF6A40
+$jaune-foncer: #AABF40
+$vert-chiasse: #6ABF40
 
-$colors-names: "orange", "cyan", "pink", "lime", "vert-degeu", "bisque"
-$colors-array: orange, cyan, pink, lime, $vert-degeu, bisque 
+$colors-names: "orange", "cyan", "pink", "lime", "vert-degeu", "bisque", "bleu-clair", "orange-jaune", "vert-clair", "rouge-foncer", "violet-clair", "orange-foncer", "jaune-foncer", "vert-chiasse", "grey"
+$colors-array: orange, cyan, pink, lime, $vert-degeu, bisque, $bleu-clair, $orange-jaune, $vert-clair, $rouge-foncer, $violet-clair, $orange-foncer, $jaune-foncer, $vert-chiasse, grey   
+
+
+$grid-breakpoints: (xs: 0, sm: 576px, lg: 992px )
+
 
 @each $color in $colors-array
     $i: index($colors-array, $color)
     .#{nth($colors-names, $i)}
         background-color: $color
 
-
+@each $break-point, $value in $grid-breakpoints
+    @media screen and (min-width: $value)
+        @for $i from 1 through 20
+            @if $value > 0
+                .height-#{$break-point}-#{$i * 5}
+                    height: $i * 5% !important   
+            @else 
+                .height-#{$i * 5}
+                    height: $i * 5% !important
 .bisque
     border: 2px solid red
 .pad-5
@@ -20,18 +40,31 @@ $colors-array: orange, cyan, pink, lime, $vert-degeu, bisque
 .h-95
     height: 95%
 
+.h-90
+    height: 90%
 
-.h-30
-    height: 30%
+
+.h-85
+    height: 85%
+
+.h-35
+    height: 35%
+
+.h-10
+    height: 10%
 
 .h-15
     height: 15%
 
-.h-10
-    height: 12.5%
+.h-5
+    height: 5%
+
 
 .h-20
     height: 40%
 
 .h-45
     height: 45%
+
+.h-30
+    height: 30%
